--- a/get_video.ipynb
+++ b/get_video.ipynb
@@ -12,6 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Connect to IMX708 CSI camera\n",
+    "\n",
     "[GitHub: JetsonHacksNano/CSI-Camera](https://github.com/JetsonHacksNano/CSI-Camera)  \n",
     "\n",
     "How To Check Camera Connection  \n",
@@ -20,21 +22,43 @@
     "\n",
     "Install Raspberry Pi Camera Module v3 IMX708 Driver.  \n",
     "[RidgeRun Developer Wiki](https://developer.ridgerun.com/wiki/index.php/Raspberry_Pi_Camera_Module_3_IMX708_Linux_driver_for_Jetson)\n",
-    "\n",
-    "[Jetson Orin Nano DevKitとCSIカメラを繋ぐ](https://qiita.com/uzuna/items/324f81daf1a712e051d8)  \n",
-    "check if there is message, \"imx708 is bounded\", in log message in /var/log/dmesg"
+    "```\n",
+    "View the Pixel format\n",
+    "```\n",
+    "v4l2-ctl --list-formats-ext  \n",
+    "v4l2-ctl --list-devices\n",
+    "v4l2-ctl --device /dev/video0 --list-formats-ext\n",
+    "v4l2-ctl --device /dev/video0 --list-ctrls\n",
+    "```\n",
+    "Preview without converting\n",
+    "```\n",
+    "SENSOR_ID=0 \n",
+    "FRAMERATE=14 \n",
+    "gst-launch-1.0 nvarguscamerasrc sensor-id=$SENSOR_ID ! \"video/x-raw(memory:NVMM),width=4608,height=2592,framerate=$FRAMERATE/1\" ! queue ! nvegltransform ! nveglglessink\n",
+    "```\n",
+    "Preview with converting\n",
+    "```\n",
+    "sensor_id=0\n",
+    "capture_width=4608\n",
+    "capture_height=2592\n",
+    "display_width=960\n",
+    "display_height=540\n",
+    "framerate=14\n",
+    "flip_method=0\n",
+    "gst-launch-1.0 nvarguscamerasrc sensor-id=$sensor_id ! \"video/x-raw(memory:NVMM), width=$capture_width, height=$capture_height, framerate=$framerate/1\" ! nvvidconv flip-method=$flip_method ! \"video/x-raw, width=$display_width, height=$display_height, format=(string)BGRx\" ! queue ! videoconvert ! \"video/x-raw, format=(string)BGR\" ! nveglglessink\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nvarguscamerasrc sensor-id=0 ! video/x-raw(memory:NVMM), width=(int)1920, height=(int)1080, framerate=(fraction)30/1 ! nvvidconv flip-method=0 ! video/x-raw, width=(int)960, height=(int)540, format=(string)BGRx ! videoconvert ! video/x-raw, format=(string)BGR ! appsink\n",
+      "gst-launch-1.0 nvarguscamerasrc sensor-id=0 ! \"video/x-raw(memory:NVMM), width=4608, height=2592, framerate=14/1\" ! nvvidconv flip-method=0 ! \"video/x-raw, width=960, height=540,, format=(string)BGRx\" ! queue ! videoconvert ! \"video/x-raw, format=(string)BGR\" ! nveglglessink\n",
       "Error: Unable to open camera\n"
      ]
     }
@@ -58,20 +82,19 @@
     "\n",
     "def gstreamer_pipeline(\n",
     "    sensor_id=0,\n",
-    "    capture_width=1920,\n",
-    "    capture_height=1080,\n",
+    "    capture_width=4608,\n",
+    "    capture_height=2592,\n",
     "    display_width=960,\n",
     "    display_height=540,\n",
-    "    framerate=30,\n",
+    "    framerate=14,\n",
     "    flip_method=0,\n",
     "):\n",
     "    return (\n",
-    "        \"nvarguscamerasrc sensor-id=%d ! \"\n",
-    "        \"video/x-raw(memory:NVMM), width=(int)%d, height=(int)%d, framerate=(fraction)%d/1 ! \"\n",
-    "        \"nvvidconv flip-method=%d ! \"\n",
-    "        \"video/x-raw, width=(int)%d, height=(int)%d, format=(string)BGRx ! \"\n",
-    "        \"videoconvert ! \"\n",
-    "        \"video/x-raw, format=(string)BGR ! appsink\"\n",
+    "        'nvarguscamerasrc sensor-id=%d ! '\n",
+    "        '\"video/x-raw(memory:NVMM), width=(int)%d, height=(int)%d, framerate=(fraction)%d/1\" ! '\n",
+    "        'nvvidconv flip-method=%d ! '\n",
+    "        '\"video/x-raw, width=(int)%d, height=(int)%d,, format=(string)BGRx\" ! '\n",
+    "        'queue ! videoconvert ! \"video/x-raw, format=(string)BGR\" ! nveglglessink'\n",
     "        % (\n",
     "            sensor_id,\n",
     "            capture_width,\n",
@@ -118,11 +141,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Connect to USB camera\n",
+    "https://qiita.com/akira-sasaki/items/7465f6cfd6ab5977f1c9  \n",
+    "check connected usb camera list\n",
+    "```\n",
+    "sudo apt update\n",
+    "sudo apt upgrade\n",
+    "sudo apt install v4l-utils\n",
+    "v4l2-ctl --list-device \n",
+    "```\n",
+    "show camera parameters\n",
+    "```\n",
+    "v4l2-ctl -d /dev/video0 --list-formats-ext\n",
+    "```\n",
+    "show image as YUYV 640x480 30fps\n",
+    "```\n",
+    "gst-launch-1.0 v4l2src device=\"/dev/video2\" ! \\\n",
+    "'video/x-raw, width=640, height=480, framerate=30/1' ! \\\n",
+    "videoconvert ! \\\n",
+    "nv3dsink\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Publish USB camera video streaming\n",
+    "Use MediaMTX and FFmpeg  \n",
+    "https://github.com/bluenviron/mediamtx"
+   ]
   }
  ],
  "metadata": {
@@ -142,6 +195,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2c52945e00f4ebf230b9253606b14a0e819bebd501dc51879fbad6b05dde25e9"
+   }
   }
  },
  "nbformat": 4,
